# ocpeasy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cli.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  ocpeasy-ct-linux.yml
__tests__/: __init__.py  foo_test.py
modules/: __init__.py  build.py  buildStage.py  constants.py  deploy.py  scaffold.py
modules/__fixtures__/stages/: development.yml  ocpeasy_prod.yml
modules/utils/: __init__.py
ocpeasy/: __main__.py  buildStage.py  compose.py  constants.py  createStage.py  deploy.py  deployStage.py  destroy.py  notify.py  ocUtils.py  scaffold.py  utils.py  utils_test.py
ocpeasy/__fixtures__/: ocpeasy.yml
ocpeasy/__fixtures__/project/: ocpeasy.yml
src/: __init__.py  buildStage.py  cli.py  constants.py  deploy.py  scaffold.py  scaffold_test.py
src/__fixtures__/project/: ocpeasy.yml
src/__fixtures__/stages/: production.yml
src/utils/: __init__.py  utils_test.py
