[tool.poetry]
name = "ocpeasy"
version = "0.1.0"
description = ""
authors = ["David Barrat <david@barrat.io>"]

[tool.poetry.dependencies]
python = "3.9.0"
fire = "^0.3.1"
GitPython = "^3.1.12"
simple-term-menu = "^0.10.4"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
flake8 = "^3.8.4"
testify = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
