[tool.poetry]
name = "ocpeasy"
version = "0.1.0"
description = ""
authors = ["David Barrat <david@barrat.io>"]

[tool.poetry.dependencies]
python = "3.9.0"
fire = "^0.3.1"
GitPython = "^3.1.12"
simple-term-menu = "^0.10.4"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.1"
black = "^20.8b1"
pytest-mock = "^3.5.1"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
